@@ -3,7 +3,7 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- The mail notification now also sends mail to unconfirmed attendees.
 Bug fixes:
 ~~~~~~~~~~
 - It was impossible to change the event type after creation.
@@ -12,6 +12,8 @@ Bug fixes:
 - February could be skippad completely when navigating in monthly view,
   in really unlucky cases. Rewrote that part, with a new skin method,
   calendar_getPrevNextPage.py.
+- Trying to get an email for orphaned members raises a key error. I now
+  trap this.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
